Sun May  4 15:32:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/lex.c (Lex_Char2Int): Merge into...
	(Lex_GetPrim): ...this. Add check on empty character constant.  Give
	warning on non-standard multi-character constant and implement it
	differently.
	* unittests/compare/core/directive_data_integer.s: Update test case.

Sun Apr  6 01:04:42 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/directive_storagemap.c: Drop support for ValueCode.
	(c_alloc): Add check on redefinition of mapping label.
	* src/symbol.c (Symbol_Define): When a symbol gets redefined, only
	use the Value_Equal test, Code_Eval should not be necessary anymore.

Sun Apr  6 01:02:51 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/register_types.s: Add test on register
	redefinition.

Sun Apr  6 01:01:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/storagemap_register.s: Add BASED AREA test.

Sun Apr  6 00:56:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* core/variables.s: Renamed to...
	* core/gblx_lclx_setx.s: ...this.

Sat Apr  5 23:48:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* Makefile.in (OUTPUTTYPE): Define as AOF or ELF depending on output
	fileformat choosen.
	(OUTPUTELF): Remove definition.
	* core/instr_b_bl_blx_reloc.s: Use OUTPUTTYPE instead of OUTPUTELF.
	* core/instr_bx_reloc.s: Likewise.
	* core/instr_cbz_cbnz.s: Likewise.

Sun Mar 16 15:49:25 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (GetBranchLabel): Improve support for branches to
	absolute addresses.
	(m_branch): Support ValueInt ELF relocs.
	(m_cbnz_cbz): Likewise.
	(m_blx): Likewise.
	* src/reloc.c (Reloc_CreateInternal): Add support for ValueInt
	ELF relocs.
	* src/symbol.h (SymbolAttr::value): Improve comments.

	unittest/reloc:
	* src/branch_no_org.s: Add
	* src/branch_with_org.s: Likewise.
	* src/include/branch.s: Likewise.
	* ref/branch_no_org_aof.txt: Likewise.